# omango

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: bench_queue.rs  benchmarks.rs
src/: backoff.rs  bucket.rs  cache_padded.rs  common.rs  error.rs  lib.rs  wg.rs
src/mpmc/: mod.rs  queue.rs  spinlock.rs  waker.rs
src/queue/: bounded.rs  elem.rs  error.rs  mod.rs  mpmc.rs  spsc.rs  state.rs  unbounded.rs  waker.rs
src/single/: flight.rs  mod.rs  source.rs
src/spsc/: mod.rs  queue.rs  spinlock.rs  waker.rs
tests/: tests.rs
