[package]
name = "omango"
version = "0.1.0"
authors = ["Trung <tqtrungse@gmail.com>"]
edition = "2021"
description = "Lock-free bounded SPSC and MPMC channel"
license = "MIT"

[dev-dependencies]
criterion = "0.3.5"
num_cpus = "1.13.1"
flume = "0.10.12"
crossbeam-channel = "0.5.4"

[dependencies]
likely_stable = "0.1.2"

[[bench]]
name = "benchmarks"
harness = false