[package]
name = "omango"
version = "0.2.6"
authors = ["Trung Tran <tqtrungse@gmail.com>"]
edition = "2021"
description = "Concurrency collections"
license = "MIT"
repository = "https://github.com/tqtrungse/omango"
homepage = "https://github.com/tqtrungse/omango"
documentation = "https://docs.rs/omango"
keywords = ["mpmc-spsc", "waitgroup", "singlefligt", "singlesource"]
categories = ["concurrency", "algorithms", "data-structures"]

[dev-dependencies]
rtrb = "0.3.0"
flume = "0.11.0"
num_cpus = "1.16.0"
ringbuf = "0.4.0-rc.2"
crossbeam-channel = "0.5.11"
criterion = { version = "0.5.1", features = ["default", "stable"] }

[dependencies]
parking_lot = "0.12.3"
omango-util = "0.1.6"
omango-futex = "0.1.2"

[[bench]]
name = "bench_queue"
harness = false